--- a/CGMH-Bootstrap-DEMO/Views/MVCDemo/Index.cshtml
+++ b/CGMH-Bootstrap-DEMO/Views/MVCDemo/Index.cshtml
@@ -79,13 +79,14 @@
                 <h3>原始按鈕</h3>
                 <p class="text-danger">Demo code:</p>
                 <pre class="prettyprint">
- @@Html.ActionLink("連結1", "Index", null, new { @@class = "" })
- @@Html.ActionLink("連結2", "Index", null, new { @@class = "" })
- @@Html.ActionLink("連結3", "Index", null, new { @@class = "" })
- @@Html.ActionLink("連結4", "Index", null, new { @@class = "" })
- @@Html.ActionLink("連結5", "Index", null, new { @@class = "" })
- @@Html.ActionLink("連結6", "Index", null, new { @@class = "" })
- @@Html.ActionLink("連結7", "Index", null, new { @@class = "" })
+
+ &#64Html.ActionLink("連結1", "Index", null, new { &#64class = "" })
+ &#64Html.ActionLink("連結2", "Index", null, new { &#64class = "" })
+ &#64Html.ActionLink("連結3", "Index", null, new { &#64class = "" })
+ &#64Html.ActionLink("連結4", "Index", null, new { &#64class = "" })
+ &#64Html.ActionLink("連結5", "Index", null, new { &#64class = "" })
+ &#64Html.ActionLink("連結6", "Index", null, new { &#64class = "" })
+ &#64Html.ActionLink("連結7", "Index", null, new { &#64class = "" })
                 </pre>
                 <p class="text-primary">實例:</p>
                 @Html.ActionLink("連結1", "Index", null, new { @class = "" })
@@ -100,13 +101,14 @@
                 <h3>Bootstrap美化按鈕</h3>
                 <p class="text-danger">Demo code:</p>
                 <pre class="prettyprint">
- @@Html.ActionLink("連結1", "Index", null, new { @@class = "btn btn-default" })
- @@Html.ActionLink("連結2", "Index", null, new { @@class = "btn btn-primary" })
- @@Html.ActionLink("連結3", "Index", null, new { @@class = "btn btn-info" })
- @@Html.ActionLink("連結4", "Index", null, new { @@class = "btn btn-success" })
- @@Html.ActionLink("連結5", "Index", null, new { @@class = "btn btn-warning" })
- @@Html.ActionLink("連結6", "Index", null, new { @@class = "btn btn-danger" })
- @@Html.ActionLink("連結7", "Index", null, new { @@class = "btn btn-link" })
+
+ &#64Html.ActionLink("連結1", "Index", null, new { &#64class = "btn btn-default" })
+ &#64Html.ActionLink("連結2", "Index", null, new { &#64class = "btn btn-primary" })
+ &#64Html.ActionLink("連結3", "Index", null, new { &#64class = "btn btn-info" })
+ &#64Html.ActionLink("連結4", "Index", null, new { &#64class = "btn btn-success" })
+ &#64Html.ActionLink("連結5", "Index", null, new { &#64class = "btn btn-warning" })
+ &#64Html.ActionLink("連結6", "Index", null, new { &#64class = "btn btn-danger" })
+ &#64Html.ActionLink("連結7", "Index", null, new { &#64class = "btn btn-link" })
                 </pre>
                 <p class="text-primary">實例:</p>
                 @Html.ActionLink("連結1", "Index", null, new { @class = "btn btn-default" })
@@ -124,6 +126,7 @@
             <div class="col-sm-12">
                 <p class="text-danger">Demo code:</p>
                 <pre class="prettyprint">
+
  &lt;button type="button" class="btn btn-success btn-xs"&gt;&lt;i class="glyphicon glyphicon-edit"&gt; 縮小按鈕&lt;/button&gt;
  &lt;button type="button" class="btn btn-warning"&gt;&lt;i class="glyphicon glyphicon-edit"&gt; 正常大小&lt;/button&gt;
  &lt;button type="button" class="btn btn-danger btn-lg"&gt;&lt;i class="glyphicon glyphicon-edit"&gt; 放大按鈕&lt;/button&gt;
@@ -140,6 +143,7 @@
             <div class="col-sm-12">
                 <p class="text-danger">Demo code:</p>
                 <pre class="prettyprint">
+
  &lt;div class="panel panel-default"&gt;
     &lt;div class="panel-body"&gt; 
         無標題面板
@@ -251,6 +255,7 @@
             <div class="col-sm-12">
                 <p class="text-danger">Demo code:</p>
                 <pre class="prettyprint">
+
  &lt;div class="row"&gt;
      &lt;div class="col-sm-offset-4 col-sm-4"&gt;.col-sm-offset-4 .col-sm-4&lt;/div&gt;
  &lt;/div&gt;
@@ -284,6 +289,7 @@
             <div class="col-sm-12">
                 <p class="text-danger">Demo code:</p>
                 <pre class="prettyprint">
+
  &lt;div class="row"&gt;
      &lt;div class="col-xs-6 bg-success"&gt;
          在小螢幕上也會水平排列
@@ -352,5 +358,6 @@
         </div>
     </div>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 </body>
 </html>
